[tool.poetry]
name = "claude-code-social-agents"
version = "0.1.0"
description = "Multi-agent LLM system for automated content generation"
authors = ["Your Name <your.email@example.com>"]
readme = "CLAUDE.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-ai = "0.2.15"
langgraph = "0.4.8"
openai = "1.84.0"
logfire = "3.18.0"
typer = "^0.12.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
fastapi = "^0.115.0"
uvicorn = "^0.24.0"
websockets = "^13.0"
pillow = "^11.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
social-agents = "main:app"
api-server = "run_api:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "DTZ", "T20", "RET", "SIM", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "PLR0913"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true